# WayArc

./: .build-instructions  .gdbinit  .gitmodules  CMakeLists.txt  README.md  autogen.sh  debug.h
src/: CMakeLists.txt  WayArc.cxx  cwformat.cpp  debug_ostream_operators.h  hello_test.cxx  logging.cxx  tinywl.cpp
src/wl/: EventInfo.h  EventType.h  Listener.h  debug_ostream_operators.h
src/wlr/: CMakeLists.txt  EventClient.h  EventsContainer.h  Scene.cxx  Scene.h  events.h  listener.h
src/wlr/events_generator/: .gitignore  CMakeLists.txt  EventsGenerator.templ  README  analyzer.cpp  analyzer.out  events_header.h  generate-events-container-list.sh  generate.cpp  generate.sh  generate_EventsContainer.sh  listener_header.h  move_only_function.cpp  renamer.sh  show.sh
tests/: CMakeLists.txt  signal-server.cxx
